<resources>

    <string name="app_name">CastGame</string>
    <string name="nav_home">Revenir au menu</string>
    <string name="nav_help">Afficher l\'aide</string>
    <string name="nav_exit">Quitter le jeu</string>
    <string name="nav_about">A propos</string>

    <string name="ic_desc">icône</string>

    <!-- nom des pages -->
    <string name="page_welcome">Bienvenue dans le jeu du cast !</string>
    <string name="page_difficulty">Choix de la difficulté</string>
    <string name="page_game_type">Choix du type de jeu</string>
    <string name="page_template">Choix du template</string>
    <string name="page_card">Choix de carte</string>
    <string name="page_answer_companion">Résultat</string>
    <string name="page_answer_solo">Entrez votre réponse</string>
    <string name="page_map">Carte</string>
    <string name="page_about">A propos</string>
    <string name="page_answer">Solution</string>
    <string name="page_help">Aide</string>

    <string name="map_selection">Aucune carte affichable pour le moment\nVeuillez choisir une difficulté</string>

    <!-- A propos -->
    <string name="about_title1">Informations</string>
    <string name="about_title2">Credits</string>
    <string name="about_text1">Ce projet a été réalisé dans le cadre du projet tuteuré du Semestre 3 du département informatique de l\'IUT de Laval (2017 – 2018).</string>
    <string name="about_text2">L\'objectif était de transformer un jeu existant en version papier, en une version mobile plus interactive permettant aux étudiants de vérifier directement la réponse choisie. De plus, cette version permet de mieux visualiser la carte Template sélectionnée.\n\nCe jeu est utile à l\'apprentissage de la Programmation Orientée Objet, notamment pour comprendre le principe de Cast en Java.</string>
    <string name="about_credits">TOUCHAIS Mickael\nVUILLEMIN Thomas\nCHAUVIN Dimitri\nDUFAIX Clément\nBRIAND Guillaume</string>
    <string name="credits">Icônes faites par Zlatko Najdenovski sur www.flaticon.com  </string>

    <!-- page d'aide -->
    <string name="help_title1">Principe du Cast</string>
    <string name="help_title2">Utiliser l\'application</string>
    <string name="help_text1">Le <b>cast</b> est le fait de forcer le compilateur à considérer un objet comme étant d\’un type qui n’est pas le type déclaré ou réel de l’objet.\n\nEn Java, les seuls casts autorisés entre classes sont les casts <b>entre classe mère et classe fille.</b></string>
    <string name="help_text2">Si vous souhaitez obtenir plus d\'informations à propos de l\'héritage et du cast, suivez ce lien <a href="http://perso.univ-lemans.fr/~i161408/dl/heritageJava.pdf">heritage.pdf </a></string>

    <string name="help_text3">A partir de l\'accueil, 2 choix s\'offrent à vous : le mode facile et difficile.\nVous avez ensuite le choix entre le mode Compagnon et le mode Révisions.\n\n<b>Mode Révisions :</b> Un cas vous est proposé, vous devez indiquer si dans la situation le code se compile, s\'exécute et ce qu\'indique l\'affichage à la sortie. \n\n<b>Mode compagnon : </b>Vous devez d\'abord choisir un template. Vous aurez ensuite à choisir différentes cartes pour compléter ce template. Lorsque toutes les cartes ont été choisies, l\'application affiche le résultat du template complété.</string>

    <!-- Difficulté -->
    <string name="easy">Facile</string>
    <string name="hard">Difficile</string>

    <!-- Type de jeu -->
    <string name="mode_companion">Mode compagnon</string>
    <string name="mode_solo">Mode révisions</string>

    <string name="start_game">C\'est parti !\nBonne chance</string>

    <!-- Réponses pour les différents modes de jeu -->
    <string name="rep_compilation">Compile</string>
    <string name="rep_execution">S\'exécute</string>
    <string name="rep_display">Affiche\n\n</string>
    <string name="new_template">Nouveau template</string>
    <string name="view_answer">Voir la réponse</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
