<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context="pts3.castgame.activities.MapActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondary"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/b_back_help"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/backarrow"
            android:contentDescription="@string/ic_desc" />

        <TextView
            style="@style/BigTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/page_help" />

        <View
            android:layout_width="40dp"
            android:layout_height="40dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" >

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/help_title1"
                style="@style/SimpleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_title1" />

            <TextView
                android:id="@+id/help_text1"
                style="@style/SmallTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_text1" />

            <TextView
                android:id="@+id/help_text2"
                style="@style/SmallTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_text2" />

            <TextView
                android:id="@+id/help_title2"
                style="@style/SimpleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_title2" />

            <TextView
                android:id="@+id/help_text3"
                style="@style/SmallTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/help_text3" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>