<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context="pts3.castgame.activities.MapActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondary"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/b_back_about"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/backarrow"
            android:contentDescription="@string/ic_desc" />

        <TextView
            style="@style/BigTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/page_about" />

        <View
            android:layout_width="40dp"
            android:layout_height="40dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/about_title1"
                style="@style/SimpleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_title1" />

            <TextView
                android:id="@+id/about_text1"
                style="@style/SmallTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_text1" />

            <ImageView
                android:id="@+id/about_iut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                app:srcCompat="@drawable/iut" />

            <TextView
                android:id="@+id/about_text2"
                style="@style/SmallTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_text2" />

            <TextView
                android:id="@+id/about_title2"
                style="@style/SimpleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_title2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/about_text3"
                    style="@style/SmallTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/about_credits" />

                <ImageView
                    android:id="@+id/about_cast"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/logo" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credits" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>