<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context="pts3.castgame.fragments.GameTypeFragment">

    <TextView
        style="@style/SimpleTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page_game_type" />

    <LinearLayout
        style="@style/ButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/b_mode_companion"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="80dp"
            android:layout_weight="0.5"
            android:text="@string/mode_companion" />

        <Button
            android:id="@+id/b_mode_solo"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="80dp"
            android:layout_marginTop="30dp"
            android:layout_weight="0.5"
            android:text="@string/mode_solo" />

    </LinearLayout>

</LinearLayout>
