<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context="pts3.castgame.fragments.AnswerCompanionFragment">

    <TextView
        style="@style/SimpleTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page_answer" />

    <TextView
        android:id="@+id/template_container"
        style="@style/TemplateContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textAlignment="center" />

    <LinearLayout
        style="@style/SimpleContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <View
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rep_compilation"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/icon_compilation"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/nok"
                android:contentDescription="@string/ic_desc" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <View
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rep_execution"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/icon_execution"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/nok"
                android:contentDescription="@string/ic_desc" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/display_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <View
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/text_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rep_display" />

            <ImageView
                android:id="@+id/icon_display"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/nok"
                android:contentDescription="@string/ic_desc" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></LinearLayout>

    <Button
        android:id="@+id/b_new_template"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/new_template" />

</LinearLayout>