<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:orientation="vertical"
    tools:context="pts3.castgame.fragments.ResultatPapierFragment">

    <TextView
        style="@style/TitrePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page_reponse" />

    <TextView
        android:id="@+id/templateReponseTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" />

    <LinearLayout
        style="@style/ButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/compilePasTextView"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"
            android:layout_weight="0.3"
            android:text="@string/rep_compilation"
            android:textColor="#FF0000" />

        <Button
            android:id="@+id/executePasTextView"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0.3"
            android:text="@string/rep_execution"
            android:textColor="#FF0000" />

        <Button
            android:id="@+id/afficheTextView"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0.3"
            android:text="@string/rep_display" />

    </LinearLayout>

</LinearLayout>
