<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context="pts3.castgame.fragments.AnswerSoloVerificationFragment">

    <TextView
        style="@style/SimpleTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page_answer" />

    <TextView
        android:id="@+id/template_selected"
        style="@style/TemplateContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp" />

    <LinearLayout
        style="@style/SimpleContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Votre réponse" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Solution" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageButton
                android:id="@+id/supposed_compilation"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:adjustViewBounds="true"
                android:background="@drawable/nok_black_white"
                android:contentDescription="@string/ic_desc"
                android:scaleType="fitCenter"
                android:tag="black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rep_compilation"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/solution_compile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/nok_black_white"
                android:scaleType="fitCenter"
                android:tag="black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageButton
                android:id="@+id/supposed_execution"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/nok_black_white"
                android:contentDescription="@string/ic_desc"
                android:scaleType="fitCenter"
                android:tag="black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rep_execution"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/solution_execute"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/nok_black_white"
                android:contentDescription="@string/ic_desc"
                android:scaleType="fitCenter"
                android:tag="black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/display_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/supposed_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Affichage"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/solution_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent" />

    </LinearLayout>

    <!-- Prend la place inutile -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></LinearLayout>

    <Button
        android:id="@+id/b_validate"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/new_template" />

</LinearLayout>
