<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context="pts3.castgame.fragments.AnswerSoloFragment">


    <TextView
        style="@style/SimpleTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="A toi de jouer!" />

    <TextView
        android:id="@+id/template_selected_Solo"
        style="@style/TemplateContainer"
        android:layout_width="match_parent"
        android:layout_height="150dp"

        android:textAlignment="center" />

    <LinearLayout
        style="@style/TemplateContainer"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageButton
                android:id="@+id/buttonNokCompile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:scaleType="fitCenter"
                android:src="@drawable/nok_black_white"
                android:tag="black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rep_compilation" />

            <ImageButton
                android:id="@+id/buttonOkCompile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:scaleType="fitCenter"
                android:src="@drawable/ok_black_white"
                android:tag="black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageButton
                android:id="@+id/buttonNokExecute"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:scaleType="fitCenter"
                android:src="@drawable/nok_black_white"
                android:tag="black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rep_execution" />

            <ImageButton
                android:id="@+id/buttonOkExecute"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:scaleType="fitCenter"
                android:src="@drawable/ok_black_white"
                android:tag="black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:id="@+id/display_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           >

            <View
                android:layout_width="40dp"
                android:layout_height="match_parent" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Affichage" />

                <Spinner
                    android:id="@+id/spinnerSolo"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/b_new_template"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/view_answer" />

</LinearLayout>
